Fix CSV Export of Investment Accounts

The CSV-Export does not issue transactions in non-English installations.
Fixed by using the accountType() member instead of a possibly translated
string.

cherry-picked from 97d1683c0329326a82bbf1e445cab37f9f4474ee and adjusted
to master

BUG:395040